--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.2.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.1.8"
   },
