--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.1",
