--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "fashion-hats-ui",
+  "name": "smp-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "jquery": "^3.4.0",
     "object-mapper": "^5.0.0",
     "react": "^16.8.6",
