--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "jest": "^23.6.0"
+    "@babel/preset-env": "^7.4.4"
   }
 }
